# dw

./: .gitignore  1A_Anom_dataset_prep_and_scaling.ipynb  1_Dataset_prep_and_local_scaling.ipynb  2_Surrogate_data_example.ipynb  2a_Surrogate_data_example_short.ipynb  2a_Synthetic_data_example.ipynb  2b_Measurement_error_res_dependence.ipynb  3A_Fitting_the_DW_model_to_anomalous_data.ipynb  3_Fitting_DW_to_paired_data-fig_1.ipynb  3_Fitting_DW_to_paired_data.ipynb  4A_Making_Priors_Anom.ipynb  4_Making_Priors.ipynb  4_Parsing_DW_parameters.ipynb  5_Bivariate_priors.ipynb  5_Parsing_DW_parameters.ipynb  5e1y_phases.pkl  6 Bivariate_conditional_amplitude_phase_dists.ipynb  6 Bivariate_priors_tidy.ipynb  6_Bivariate_conditional_amplitude_phase_dists.ipynb  6_Bivariate_priors_mini.ipynb  6_Bivariate_priors_paper.ipynb  6_Bivariate_priors_tidy.ipynb  6_Revisiting_difference_maps.ipynb  7_DAG_PGM_structure_factor_distributions.ipynb  7_Revisiting_difference_maps.ipynb  7_Revisiting_difference_maps_paper-Copy1.ipynb  7_Revisiting_difference_maps_paper.ipynb  7_Revisiting_difference_maps_tidy.ipynb  7_Revisiting_negative_skew.ipynb  7rin_phases_7mm1_phases_acentric.ai  8_DAG_PGM_structure_factor_distributions-paper.ipynb  8_DAG_PGM_structure_factor_distributions.ipynb  8_DAG_structure_factor_distributions-simpler.ipynb  9_more_on_the_MVN_distribution.ipynb  Bivariate_Rice_NoncentralChi2_VonMises.ipynb  DoubleWIlsonExplorations-Anom.ipynb  DoubleWIlsonExplorations-SGC5_cryo_277K.ipynb  DoubleWIlsonExplorations-e35.ipynb  DoubleWIlsonExplorations.ipynb  (+19 more)
dw_tools/: bivariate_tools.py  (+11 more)
(+71 files in other folders)
