[metadata]
name = dw_tools
version = attr: dw_tools._version.__version__
author= Hekstra Lab
author_email=doeke_hekstra@harvard.edu
url=https://github.com/Hekstra-Lab/double_wilson
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6

packages = find:

install_requires =
    matplotlib>=3.3
    numpy
    pandas
    scikit-learn
    reciprocalspaceship
    scipy

[options.extras_require]
test =
    black
